<resources>
    <string name="app_name">Walking Legs</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_log_in">Iniciar sesión</string>
    <string name="txt_forgot_your_password">¿Olvido su contraseña?</string>
    <string name="txt_create_account">Crear cuenta</string>
    <string name="txt_description">Descripcion</string>
    <string name="txt_first_name">Nombres</string>
    <string name="txt_last_name">Apellidos</string>
    <string name="txt_email">Correo Electronico</string>
    <string name="hola">Hola</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="agregar_servicio">Agregar Servicio</string>
    <string name="hola_administrador">Hola Administrador</string>
    <string name="acciones">Acciones</string>
    <string name="paseos_completados">Paseos Completados</string>
    <string name="t_tulo">Título</string>
    <string name="menu">menu</string>
</resources>