<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ff000017"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <!-- Título y Perfil -->
            <TextView
                android:id="@+id/tvAdminTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hola_administrador"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/profile"
                android:contentDescription="Perfil"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Sección de Acciones -->
        <TextView
            android:id="@+id/tvActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acciones"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvAdminTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvActions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Sección de Paseos Completados -->
        <TextView
            android:id="@+id/tvCompletedWalks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paseos_completados"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/rvActions"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCompletedWalks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvCompletedWalks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
